<resources>
    <string name="app_name">Reader</string>
    <string name="title_activity_login">Sign in</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="save_password">记住密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="have_no_account">还没有账号?</string>
    <string name="have_account">已有账号?</string>
    <string name="register_now">现在注册</string>
    <string name="sure_password">请确认密码</string>

    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="book_shelf">书架</string>
    <string name="book_store">书城</string>
    <string name="mine">我的</string>
    <string name="setting">设置</string>
    <string name="back">返回</string>
    <string name="book_detail">书籍详情</string>
    <string name="count">数量</string>
    <string name="piece">本</string>
    <string name="buy_book">立即购买</string>
    <string name="rent_book">立即租赁</string>
    <string name="leased">已租赁</string>
    <string name="purchased">已购买</string>

    <string name="username">用户名:</string>
    <string name="phone_number">手机号码:</string>
    <string name="state">状态:</string>
    <string name="wallet">钱包:</string>
    <string name="logout">退出登录</string>

    <string name="search">搜索</string>
    <string name="purchased_book">已购买图书:</string>
    <string name="leased_book">已租赁图书:</string>
    <string name="font">字体号:</string>
    <string name="module">模式:</string>
    <string name="about">关于我们</string>
    <string name="version">版本号</string>

    <string name="test_string">《天龙八部》是著名作家金庸的武侠代表作。著于1963年，历时4年创作完成（部分内容曾由倪匡代笔撰写），前后共有三版，并在2005年第三版中经历6稿修订，结局改动较大。小说以宋哲宗时代为背景，通过宋、辽、大理、西夏、吐蕃等王国之间的武林恩怨和民族矛盾，从哲学的高度对人生和社会进行审视和描写</string>

</resources>
